Changing products and design of page

--- a/src/Pages/Shared/_Layout.cshtml
+++ b/src/Pages/Shared/_Layout.cshtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - Mike and Mike's Halloween Costume Store</title>
+    <title>@ViewData["Title"] - Premium Quality Baked Goods - Seattle, WA</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
     <link rel="stylesheet" href="~/css/site.css" />
     <link href="https://fonts.googleapis.com/css?family=Yellowtail&display=swap" rel="stylesheet">
@@ -13,7 +13,7 @@
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-navbar border-bottom box-shadow mb-3">
             <div class="container">
-                <a class="navbar-brand" asp-area="" asp-page="/Index">Mike and Mike's Halloween Store</a>
+                <a class="navbar-brand" asp-area="" asp-page="/Index">Premium Quality Baked Goods</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -39,7 +39,7 @@
 
     <footer class="border-top footer text-muted bg-footer">
         <div class="container">
-            &copy; 2023 - Mike and Mike's Halloween'.WebSite - <a asp-area="" asp-page="/Privacy">Privacy</a>
+            &copy; Premium Quality Baked Goods - <a asp-area="" asp-page="/Privacy">Privacy</a>
         </div>
     </footer>
 
