--- a/src/Pages/Privacy.cshtml
+++ b/src/Pages/Privacy.cshtml
@@ -5,13 +5,10 @@
 }
 <h1>@ViewData["Title"]</h1>
 
-<p class="text-label">
-    Mike and Mike understand the need for the privacy of the individual and are committed to upholding it in these ever-so-uncertain times.
-    We want you to know that we do not collect any Personally Identifiable Information (PII) from our users.
-</p>
+<p class="text-label"><span>
+    At Premium Quality Baked Goods, we understand the need for the privacy of the individual and are committed to upholding it in these uncertain times.
+        We want you to know that we do not collect any Personally Identifiable Information (PII) from our users. All of the data you enter on our website is only collected to improve the content of our site.
+        This website and its contents are not for profit. Our website exists only for educational purposes.
+</span></p>
 
 
-<p class="text-label">
-    All of the data you enter on our website is only collected to improve the content of our site.
-    This website and its contents are not for profit. Our website exists only for educational purposes.
-</p>
