updated on flip behavior to display description and qunatitify available

--- a/src/Components/ProductList.razor
+++ b/src/Components/ProductList.razor
@@ -35,6 +35,8 @@
                                 <img class="card-img-top flip-card-front" src="@product.Image" style="width:345px;height:365px;">
                                 <div class="card-img-top flip-card-back" style="width:345px;height:365px;">
                                     <p>@product.Title</p>
+                                    <p>@product.Description</p>
+                                    <p>"Quantity Available @product.Quantity</p>
                                 </div>
                             </div>
                         </div>
