minor fix to flip card

--- a/src/Components/ProductList.razor
+++ b/src/Components/ProductList.razor
@@ -36,7 +36,7 @@
                                 <div class="card-img-top flip-card-back" style="width:345px;height:365px;">
                                     <p>@product.Title</p>
                                     <p>@product.Description</p>
-                                    <p>"Quantity Available @product.Quantity</p>
+                                    <p>Quantity Available: @product.Quantity</p>
                                 </div>
                             </div>
                         </div>
